Trying to clean up some useless code and and a name to navbar. I have added but I have to change to change the color so that it can be visible

--- a/css/style.css
+++ b/css/style.css
@@ -572,7 +572,9 @@ footer p {
 	margin: 0 auto;
 	text-align: center;
 }
-.error-contents{}
+.error-contents{
+	display:a ;
+}
 .pricing-box{
 	padding: 30px 0px;
 }
