--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,9 @@ button.btn-secondary:hover{
 	color: #4eae3a;
 	border-color: #4eae3a;
 }
+.nav-color{
+	color: #202428;
+}
 
 
 .slider-main .carousel .carousel-inner .carousel-item:before{
@@ -572,9 +575,7 @@ footer p {
 	margin: 0 auto;
 	text-align: center;
 }
-.error-contents{
-	display:a ;
-}
+
 .pricing-box{
 	padding: 30px 0px;
 }
