--- a/css/all.css
+++ b/css/all.css
@@ -15,6 +15,17 @@
   text-rendering: auto;
   line-height: 1; }
 
+  .invisible {
+    display: inline;
+    visibility: hidden;
+  }
+  .xmargin {
+    margin-right: 5px;
+  }
+  .xlower {
+    position: relative;
+    top: 3px;
+  }
  .customers-box {
 		position: relative;
     left: 10px;
