--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
   font-family: 'Poppins', sans-serif;
   font-size: 14px;
   color: #4e3914;
+  overflow-x:hidden;
 }
 
 @media (min-width: 992px) {
